--- a/home.html
+++ b/home.html
@@ -17,24 +17,31 @@
     <header>
         <div class="header">
             <div class="logo">
-                <img class="logoimg" src="./assets/images/logoawax.jpg" alt="Logo Awax">
+                <div class="logoimg"> 
+                    <img src="media/logoawax.jpg" />
+                </div>
             </div>
             <div class="menu">
-                <nav>
-                    <ul>
-                        <li class="active"><a href="">Home</a></li>
-                        <li class="menu-item"><a href="">About US</a></li>
-                        <li class="menu-item"><a href="">Services</a></li>
-                        <li class="menu-item"><a href="">Our Projects</a></li>
-                        <li class="menu-item"><a href="">Our Team</a></li>
-                        <li class="menu-item"><a href="">Happy Clients</a></li>
-                        <li class="menu-item"><a href="">Price</a></li>
-                        <li class="menu-item"><a href="">Some Facts</a></li>
-                        <li class="menu-item"><a href="">Contact US</a></li>
+                <nav class="wrap-menu">
+                    <div class="image-area">
+                        <img class="menu-opener btnMenu_open" src="assets/images/menu.png" />
+                    </div>
+                    <ul id="menu-ul" class="menu-ul">
+                        <div class="image-area">
+                            <img class="menu-opener btnMenu_close" src="assets/images/menu.png" />
+                        </div>
+                        <li class="active"><a href=""class="menu-item-action" >Home</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">About US</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Services</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Our Projects</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Our Team</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Happy Clients</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Price</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Some Facts</a></li>
+                        <li class="menu-item"><a href=""class="menu-item-action">Contact US</a></li>
                     </ul>
                 </nav>
             </div>
-        </div>
     </header>
 
     <main>
@@ -686,6 +693,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="assets/js/script.js"></script>
 
     <script>
         const swiper = new Swiper('.swiper', {
